--- a/Gijima.IOBM.Shell/Assets/Styles/Styles.xaml
+++ b/Gijima.IOBM.Shell/Assets/Styles/Styles.xaml
@@ -172,7 +172,22 @@
 		<Setter Property="VerticalAlignment" Value="Center" />
 	</Style>
 
-	<Style x:Key="UXHeaderImageButtonStyle" TargetType="Button">
+        <!--Elmer-->
+    <Style x:Key="UXAcordianButtonStyle" TargetType="Button">
+        <Setter Property="Height" Value="35" />
+        <Setter Property="HorizontalContentAlignment" Value="Left"/>
+        <Setter Property="Background" Value="#dba227" />
+        <Setter Property="FontFamily" Value="Arial" />
+        <Setter Property="FontStyle" Value="Italic" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="FontWeight" Value="SemiBold" />
+        <Setter Property="Foreground" Value="#8c1717" />
+        <Setter Property="Padding" Value="10,0,0,0" />
+        <Setter Property="BorderThickness" Value="2" />
+        <Setter Property="Margin" Value="0,0,0,3" />
+    </Style>
+
+    <Style x:Key="UXHeaderImageButtonStyle" TargetType="Button">
 		<Setter Property="Height" Value="24" />
 		<Setter Property="Width" Value="28" />
         <Setter Property="Padding" Value="0" />
