--- a/Modules/MobileManager/Views/Common/ViewReports.xaml
+++ b/Modules/MobileManager/Views/Common/ViewReports.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<UserControl xmlns:WPF="clr-namespace:Gijima.Controls.WPF;assembly=Gijima.Controls.WPF" 
             xmlns:ToolKit="clr-namespace:System.Windows.Controls;assembly=System.Windows.Controls.Layout.Toolkit" 
             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -27,13 +27,16 @@
                 <TextBlock Grid.Column="0" Text="Report View" Margin="10,0,0,2" Style="{StaticResource UXHeaderTextStyle}"/>
             </Grid>
         </Border>
-        <Grid Grid.Row="1" Margin="5">
+        <Grid Grid.Row="1" Margin="5" x:Name="GridMain">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="5" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="{Binding ReportParametersHeight}" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="{Binding ReportResultsHeight}" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="70" />
@@ -55,14 +58,44 @@
                     SelectedItem="{Binding SelectedReport, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"/>
             </Border>
             <Button x:Name="ButtonViewReport" Grid.Row="0" Grid.Column="6" ToolTip="View the selected report." TabIndex="1" IsDefault="True"
-                Style="{StaticResource UXImageButtonStyle}" >
-                <Image Source="/Gijima.IOBM.MobileManager;component/Assets/Images/save_32.ico"/>
+                Style="{StaticResource UXImageButtonStyle}" Command="{Binding GenerateReportCommand}">
+                <Image Source="/Gijima.IOBM.MobileManager;component/Assets/Images/062.png"/>
             </Button>
             <TextBlock Grid.Row="2" Grid.Column="0" Text="Description:" Style="{StaticResource UXLabelTextStyle}"/>
             <TextBox x:Name="TextBoxDescription" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="6" IsTabStop="False" IsReadOnly="True" Style="{StaticResource UXTextBoxStyle}"
                 Text="{Binding SelectedReportDescription, UpdateSourceTrigger=PropertyChanged}"/>
             <Border Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="7" Height="1" Background="Gray" Margin="0,10,0,10"/>
-            <ToolKit:Accordion x:Name="AccordionReporting" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="7" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" BorderBrush="Gray" >
+            <Button Grid.Row="4" Grid.ColumnSpan="7" Height="35" Command="{Binding ReportParametersCommand}" 
+                    Style="{StaticResource UXAcordianButtonStyle}">
+                <StackPanel Orientation="Horizontal">
+                    <Expander IsExpanded="{Binding ReportParameterExpand}"/>
+                    <TextBlock Margin="5,0,0,0">Report Parameters</TextBlock>
+                </StackPanel>
+            </Button>
+            <ContentControl Grid.Row="5" Grid.ColumnSpan="7">
+                <Grid HorizontalAlignment="Center">
+                    <Grid.RowDefinitions>
+                        <RowDefinition x:Name="RowInvoice" Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="5" Height="22" Visibility="{Binding BillingPeriodVisible}">
+                        <TextBlock Text="Billing period:" Style="{StaticResource UXLabelTextStyle}" Margin="0,0,5,0"/>
+                        <ComboBox TabIndex ="0" ItemsSource="{Binding BillingPeriodCollection}" SelectedItem="{Binding SelectedBillingPeriod, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBlock Text="Invoice number:" Style="{StaticResource UXLabelTextStyle}" Margin="10,0,5,0"/>
+                        <ComboBox TabIndex ="0"  ItemsSource="{Binding InvoiceNumberCollection}" SelectedItem="{Binding SelectedInvoiceNumber, UpdateSourceTrigger=PropertyChanged}"/>
+                    </StackPanel>
+                </Grid>
+            </ContentControl>
+            <Button Grid.Row="6" Grid.ColumnSpan="7" Height="35" Command="{Binding ReportResultsCommand}" 
+                    Style="{StaticResource UXAcordianButtonStyle}">
+                <StackPanel Orientation="Horizontal">
+                    <Expander IsExpanded="{Binding ReportResultExpand}" />
+                    <TextBlock Margin="5,0,0,0">Report Results</TextBlock>
+                </StackPanel>
+            </Button>
+            <WindowsFormsHost Grid.Row="7" Grid.ColumnSpan="7" Margin="5" Width="{Binding WindowsFormWidth, UpdateSourceTrigger=PropertyChanged}">
+                <report:ReportViewer x:Name="ReportViewer" BorderStyle="None" TabIndex="22" AutoScroll="True"/>
+            </WindowsFormsHost>
+            <!--<ToolKit:Accordion x:Name="AccordionReporting" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="7" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" BorderBrush="Gray" >
                 <ToolKit:AccordionItem x:Name="AccordionItemReportParameters" Background="Goldenrod" BorderThickness="1,1,1,0" BorderBrush="Gray" TabIndex="2" IsSelected="{Binding ParamaterViewSelected, UpdateSourceTrigger=PropertyChanged}">
                     <ToolKit:AccordionItem.Header>
                         <TextBlock Text="Report Parameters" Style="{StaticResource UXHeaderTextStyle}" Foreground="Maroon" Margin="10,0,0,3"/>
@@ -103,23 +136,6 @@
                     <ToolKit:AccordionItem.Header>
                         <TextBlock Text="Report Results" Style="{StaticResource UXHeaderTextStyle}" Foreground="Maroon" Margin="10,0,0,3"/>
                     </ToolKit:AccordionItem.Header>
-                    <!--<Grid x:Name="Test" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="White" 
-                        Width="{Binding ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}"
-                        Height="{Binding ActualHeight, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        -->
-                    <!--<ScrollViewer x:Name="ScrollViewerReportViewer">
-                            <WindowsFormsHost>
-                                <report:ReportViewer x:Name="ReportViewer" BorderStyle="None" TabIndex="22" AutoScroll="True" />
-                            </WindowsFormsHost>
-                        </ScrollViewer>-->
-                    <!--
-                    </Grid>-->
                     <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="White"
                         Width="{Binding ActualWidth, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}"
                         Height="{Binding ActualHeight, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}}">
@@ -137,7 +153,7 @@
                     </Grid>
 
                 </ToolKit:AccordionItem>
-            </ToolKit:Accordion>
+            </ToolKit:Accordion>-->
         </Grid>
     </Grid>
 </UserControl>
